Finished early arrival error, repaired snooze button and privact policy link